# TarefaDocker

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  tarefas.db
